// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render selected cell matches snapshot 1`] = `
<div
  className="sc-bdnxRM lmmjcq"
  data-testid="PY"
  id="PY-undefined"
>
  <div
    className="grid-values coverage-none-active active-value"
    onClick={[Function]}
  >
    <i
      className="fas fa-check"
    />
  </div>
</div>
`;

exports[`should render unselected cell matches snapshot 1`] = `
<div
  className="sc-bdnxRM lmmjcq"
  data-testid="PX"
  id="PX-undefined"
>
  <div
    className="grid-values coverage-none-deactive"
    onClick={[Function]}
  >
    <p>
      X
    </p>
  </div>
</div>
`;
